<resources>
    <string name="app_name">NUB Portal</string>

    <!--    login page-->
    <string name="login_bottom_text">By login, you agree to the <b>Terms of Service</b>\n and <b>Data Processing Agreement</b> </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="login_to_your_account">Login to your\nAccount</string>

    <!--    register page-->
    <string name="register_bottom_text">By registering, you agree to the <b>Terms of Service</b>\n and <b>Data Processing Agreement</b> </string>
    <string name="register_your_account">Register your\nAccount</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!--    reset page-->

    <string name="reset_your_password">Reset your\nPassword</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset">Reset</string>
    We will send a link to your registered email
</resources>