<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.user.registerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_header"
        app:layout_constraintBottom_toTopOf="@id/guideTop1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/body"
        android:text="@string/register_your_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/guideTop" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/body"
        android:padding="5dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideTop1"
        app:layout_constraintStart_toStartOf="@id/txtHeader"
        app:layout_constraintTop_toBottomOf="@id/txtHeader" />

    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/body"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="#9FC4F4"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/txtLogin"
        app:layout_constraintStart_toEndOf="@id/txtLogin"
        app:layout_constraintTop_toTopOf="@id/txtLogin" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:padding="30dp"
        android:src="@drawable/img_register"
        app:layout_constraintBottom_toTopOf="@id/guideMiddle"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/guideTop1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideBottom1"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/guideMiddle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userMailBox"
            style="@style/AppTheme.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/e_mail"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorSubText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/body"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPasswordBox"
            style="@style/AppTheme.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorSubText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/body"
                android:inputType="textPassword"
                android:maxEms="12"
                android:minEms="6"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="30dp"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textColor="@color/white"
            app:backgroundTint="@color/blue"
            app:elevation="0dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/txtBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/body"
        android:gravity="center"
        android:text="@string/register_bottom_text"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/guideBottom1" />


</androidx.constraintlayout.widget.ConstraintLayout>